--- a/jira.css
+++ b/jira.css
@@ -1,7 +1,9 @@
 .ant-btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     line-height: 24px;
     position: relative;
-    display: inline-block;
     font-weight: 400;
     white-space: nowrap;
     text-align: center;
@@ -20,6 +22,15 @@
     color: rgba(0,0,0,.65);
     background-color: #fff;
     border: 1px solid #d9d9d9;
+}
+
+.ant-btn svg {
+    width: 16px;
+    height: 16px;
+}
+
+.ant-btn .space {
+    width: 5px;
 }
 
 .ant-btn-primary {
